# ADLX

./: README.md
Samples/C/: CMakeLists.txt  ReadMe.md
Samples/C/3DGraphics/3DSettingsEvent/: CMakeLists.txt  ReadMe.html  main3DSettingsEvent.c
Samples/C/3DGraphics/AFMF/: CMakeLists.txt  ReadMe.html  mainAFMF.c
Samples/C/3DGraphics/AnisotropicFiltering/: CMakeLists.txt  ReadMe.html  mainAnisotropicFiltering.c
Samples/C/3DGraphics/AntiAliasing/: CMakeLists.txt  ReadMe.html  mainAntiAliasing.c
Samples/C/3DGraphics/AntiLag/: CMakeLists.txt  ReadMe.html  mainAntiLag.c
Samples/C/3DGraphics/Boost/: CMakeLists.txt  ReadMe.html  mainBoost.c
Samples/C/3DGraphics/Chill/: CMakeLists.txt  ReadMe.html  mainChill.c
Samples/C/3DGraphics/EnhancedSync/: CMakeLists.txt  ReadMe.html  mainEnhancedSync.c
Samples/C/3DGraphics/FRTC/: CMakeLists.txt  ReadMe.html  mainFRTC.c
Samples/C/3DGraphics/ImageSharpening/: CMakeLists.txt  ReadMe.html  mainImageSharpening.c
Samples/C/3DGraphics/MorphologicAntiAliasing/: CMakeLists.txt  ReadMe.html  mainMorphologicAntiAliasing.c
Samples/C/3DGraphics/RSR/: CMakeLists.txt  ReadMe.html  mainRSR.c
Samples/C/3DGraphics/ResetShaderCache/: CMakeLists.txt  ReadMe.html  mainresetshadercache.c
Samples/C/3DGraphics/Tessellation/: CMakeLists.txt  ReadMe.html  mainTessellation.c
Samples/C/3DGraphics/WaitForVerticalRefresh/: CMakeLists.txt  ReadMe.html  mainWaitForVerticalRefresh.c
Samples/C/Desktop/DesktopsEvent/: CMakeLists.txt  ReadMe.html  mainDesktopsEvent.c
Samples/C/Desktop/Eyefinity/: CMakeLists.txt  ReadMe.html  mainEyefinity.c
Samples/C/Desktop/PrimaryAdapter/: CMakeLists.txt  ReadMe.html  mainPrimaryAdapter.c
Samples/C/Display/Display3DLUT/: CMakeLists.txt  ReadMe.html  mainDisplay3DLUT.c
Samples/C/Display/DisplayBlanking/: CMakeLists.txt  ReadMe.html  mainDisplayBlanking.c
Samples/C/Display/DisplayColorDepth/: CMakeLists.txt  ReadMe.html  maindisplaycolordepth.c
Samples/C/Display/DisplayConnectivityExperience/: CMakeLists.txt  ReadMe.html  mainDisplayConnectivityExperience.c
Samples/C/Display/DisplayCustomColor/: CMakeLists.txt  ReadMe.html  mainDisplayCustomColor.c
Samples/C/Display/DisplayCustomResolution/: CMakeLists.txt  ReadMe.html  mainDisplayCustomResolution.c
Samples/C/Display/DisplayDynamicRefreshRateControl/: CMakeLists.txt  ReadMe.html  mainDRRC.c
Samples/C/Display/DisplayEvents/: CMakeLists.txt  ReadMe.html  mainDisplayEvents.c
Samples/C/Display/DisplayFreeSync/: CMakeLists.txt  ReadMe.html  mainDisplayFreeSync.c
Samples/C/Display/DisplayFreeSyncColorAccuracy/: CMakeLists.txt  ReadMe.html  mainDisplayFreeSyncColorAccuracy.c
Samples/C/Display/DisplayGPUScaling/: CMakeLists.txt  ReadMe.html  mainDisplayGPUScaling.c
Samples/C/Display/DisplayGamma/: CMakeLists.txt  ReadMe.html  mainDisplayGamma.c
Samples/C/Display/DisplayGamut/: CMakeLists.txt  ReadMe.html  mainDisplayGamut.c
Samples/C/Display/DisplayHDCP/: CMakeLists.txt  ReadMe.html  mainDisplayHDCP.c
Samples/C/Display/DisplayInfo/: CMakeLists.txt  ReadMe.html  mainDisplayInfo.c
Samples/C/Display/DisplayIntegerScaling/: CMakeLists.txt  ReadMe.html  mainDisplayIntegerScaling.c
Samples/C/Display/DisplayPixelFormat/: CMakeLists.txt  ReadMe.html  mainDisplayPixelFormat.c
Samples/C/Display/DisplayScalingMode/: CMakeLists.txt  ReadMe.html  mainDisplayScalingMode.c
Samples/C/Display/DisplaySettingsEvent/: CMakeLists.txt  ReadMe.html  mainDisplaySettingsEvent.c
Samples/C/Display/DisplayVSR/: CMakeLists.txt  ReadMe.html  mainDisplayVSR.c
Samples/C/Display/DisplayVariBright/: CMakeLists.txt  ReadMe.html  mainDisplayVariBright.c
Samples/C/GPUTuning/GPUAutoTuning/: CMakeLists.txt  ReadMe.html  mainGPUAutoTuning.c
Samples/C/GPUTuning/GPUPresetTuning/: CMakeLists.txt  ReadMe.html  mainGPUPresetTuning.c
Samples/C/GPUTuning/ManualFanTuning/: CMakeLists.txt  ReadMe.html  mainManualFanTuning.c
Samples/C/GPUTuning/ManualGraphicsTuning/: CMakeLists.txt  ReadMe.html  mainManualGraphicsTuning.c
Samples/C/GPUTuning/ManualPowerTuning/: CMakeLists.txt  ReadMe.html  mainManualPowerTuning.c
Samples/C/GPUTuning/ManualVRAMTuning/: CMakeLists.txt  ReadMe.html  mainManualVRAMTuning.c
Samples/C/GPUTuning/SmartAccessMemory/: CMakeLists.txt  ReadMe.html  mainSmartAccessMemory.c
Samples/C/Generic/GPUs/: CMakeLists.txt  ReadMe.html  mainGPUs.c
Samples/C/Generic/InvalidObject/: CMakeLists.txt  ReadMe.html  mainInvalidObject.c
Samples/C/Generic/Log/: CMakeLists.txt  ReadMe.html  mainLog.c
Samples/C/Generic/WorkWithADL/: CMakeLists.txt  ReadMe.html  mainWorkWithADL.c
Samples/C/I2C/I2C/: CMakeLists.txt  ReadMe.html  mainI2C.c
Samples/C/MultiMedia/Videoupscale/: CMakeLists.txt  ReadMe.html  mainVideoupscale.c
Samples/C/PerformanceMonitoring/PerfAllMetrics/: CMakeLists.txt  ReadMe.html  mainPerfAllMetrics.c
Samples/C/PerformanceMonitoring/PerfFPSMetrics/: CMakeLists.txt  ReadMe.html  mainPerfFPSMetrics.c
Samples/C/PerformanceMonitoring/PerfGPUMetrics/: CMakeLists.txt  ReadMe.html  mainPerfGPUMetrics.c
Samples/C/PerformanceMonitoring/PerfSystemMetrics/: CMakeLists.txt  ReadMe.html  mainPerfSystemMetrics.c
Samples/C/PowerTuning/SmartShiftEco/: CMakeLists.txt  ReadMe.html  mainSmartShiftEco.c
Samples/C/PowerTuning/SmartShiftMax/: CMakeLists.txt  ReadMe.html  mainSmartShiftMax.c
Samples/C/ReceivingEventsNotifications/AsyncEventHandling/: CMakeLists.txt  ReadMe.html  mainAsyncEventHandling.c
Samples/C/ReceivingEventsNotifications/Sync3DReceive/: CMakeLists.txt  ReadMe.html  mainSync3DReceive.c
Samples/C/ReceivingEventsNotifications/SyncDisplayReceive/: CMakeLists.txt  ReadMe.html  mainSyncDisplayReceive.c
Samples/C/ReceivingEventsNotifications/SyncGPUTuning/: CMakeLists.txt  ReadMe.html  mainSyncGPUTuning.c
Samples/C/ReceivingEventsNotifications/SyncMultimedia/: CMakeLists.txt  ReadMe.html  mainSyncMultimedia.c
Samples/C/ReceivingEventsNotifications/SyncPowerTuning/: CMakeLists.txt  ReadMe.html  mainSyncPowerTuning.c
Samples/C/ServiceCall/: GPUServiceCall.md  ReadMe.html
Samples/C/ServiceCall/GPUService/: CMakeLists.txt  (+4 more)
(+3385 files in other folders)
